fixed lightbox image being too big in edge, and also hopefully prevented button from being in a perpetual hover state on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -334,11 +334,13 @@ body.lightbox-open {
 }
 
 .lightbox-image-wrapper {
-	display: grid;
+	display: flex;
 	place-items: center;
 	width: 100%;
 	height: 100%;
 	position: relative;
+	justify-content: center;
+	align-items: center;
 }
 
 .lightbox-image {
@@ -372,16 +374,17 @@ body.lightbox-open {
 	display: grid;
 	padding: 2rem;
 	color: white;
+	text-shadow: 1px 1px 0 black;
 	position: absolute;
 	font-size: 2.5rem;
 	border: none;
 }
 
-.lightbox-btn:hover {
+/*.lightbox-btn:hover {
 	transition: background-color 0.5s;
 	transition-timing-function: ease-in-out;
 	background-color: rgba(255,255,255, 0.4);
-}
+}*/
 
 .lightbox-btn:focus {
 	
@@ -399,6 +402,14 @@ body.lightbox-open {
 	right: 0;
 }
 
+/* this media query is hopefully so that the buttons hover state isn't always active on mobile */
+@media (hover: hover) {
+	.lightbox-btn:hover {
+		transition: background-color 0.5s;
+		transition-timing-function: ease-in-out;
+		background-color: rgba(255,255,255, 0.4);
+	}
+}
 
 
 /* ABOUT */
